--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 # Prerequisites
 *.d
-
+.vscode
+.env*
 # Compiled Object files
 *.slo
 *.lo
 *.o
 *.obj
-
+node_modules
 # Precompiled Headers
 *.gch
 *.pch
