--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@greymass/eosio": "^0.4.6",
     "child-process-promise": "^2.2.1",
+    "dotenv": "^10.0.0",
     "eosjs": "^21.0.3",
     "fs-extra": "^9.1.0",
     "node-fetch": "^2.6.1"
